Fixing templates and all molecules.

--- a/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/intended/configs/p4.cfg
+++ b/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/intended/configs/p4.cfg
@@ -31,6 +31,8 @@ interface Ethernet2
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 $1c$sTNAlR6rKSw=
 !
 interface Ethernet3
    description P2P_LINK_TO_pe3_Ethernet3
@@ -46,6 +48,8 @@ interface Ethernet3
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 $1c$sTNAlR6rKSw=
 !
 interface Ethernet4
    description P2P_LINK_TO_p3_Ethernet4
@@ -61,6 +65,8 @@ interface Ethernet4
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 $1c$sTNAlR6rKSw=
 !
 interface Loopback0
    description LSR_Router_ID
