--- a/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/intended/configs/pe3.cfg
+++ b/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/intended/configs/pe3.cfg
@@ -35,6 +35,8 @@ interface Ethernet1
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 $1c$sTNAlR6rKSw=
 !
 interface Ethernet2
    description C1_L3_SERVICE
@@ -58,6 +60,8 @@ interface Ethernet3
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 $1c$sTNAlR6rKSw=
 !
 interface Ethernet4
    description C2_L3_SERVICE
