--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -281,7 +281,7 @@ interface Ethernet15
    switchport pvlan mapping 111
 !
 interface Ethernet16
-   description PVLAN Promiscuous Trunk - vlan translation out
+   description PVLAN Promiscuous Trunk
    switchport
    switchport trunk allowed vlan 110-112
    switchport mode trunk
