--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host2/vxlan-interface-false.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host2/vxlan-interface-false.yml
@@ -2,7 +2,9 @@
 ## Test values that are set to false and generate configuration e.g -> "no vxlan qos ecn propagation"
 
 vxlan_interface:
-  vxlan1:
+  # Testing Vxlan1 as key
+  # Vxlan1 key is deprecated in 5.0.0. To be removed in 6.0.0
+  Vxlan1:
     vxlan:
       qos:
         dscp_propagation_encapsulation: false
