updated the porting guide

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
@@ -38,6 +38,16 @@ ip security
       sa lifetime 8 hours
       pfs dh-group 17
    !
+   sa policy SA-4
+      esp integrity md5
+      esp encryption 3des
+   !
+   sa policy SA-5
+      esp integrity sha512
+   !
+   sa policy SA-6
+      esp integrity sha384
+   !
    profile Profile-1
       ike-policy IKE-1
       sa-policy SA-1
