--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
@@ -336,6 +336,10 @@ vlan_interfaces:
             algorithm: sha-1
             key_type: 0
             key: password3
+          - id: 5
+            algorithm: sha-1
+            key_type: 0
+            key: password3
       level_2:
         key_ids:
           - id: 1
