--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/ethernet-interfaces.yml
@@ -124,3 +124,10 @@ ethernet_interfaces:
     isis_hello_padding: false
     isis_authentication_mode: md5
     isis_authentication_key: "asfddja23452"
+---
+ethernet_interfaces:
+  - name: Ethernet1
+    description: isis_authentication_mode and isis_authentication_key deprecated
+    isis_enable: ISIS_TEST
+    isis_authentication_mode: md5
+    isis_authentication_key: "asfddja23452"
