CI: Fix webdoc_avd to expose network to host

--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -8,4 +8,5 @@ services:
       - ${PWD}/:/data
     ports:
       - 127.0.0.1:8000:8000
+    network_mode: host
     entrypoint: "sh /data/development/entrypoint.sh"
