Fix the documentation.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
@@ -36,7 +36,7 @@ vlan_interfaces:
       level_2:
         key_type: 0
         key: password
-        mode: md5
+        mode: text
         rx_disabled: true
 
   - name: Vlan81
@@ -290,10 +290,6 @@ vlan_interfaces:
     isis_enable: "EVPN_UNDERLAY"
     isis_authentication:
       level_1:
-        mode: sha
-        sha:
-          key_id: 5
-      level_2:
         mode: sha
         sha:
           key_id: 5
