--- a/ansible_collections/arista/avd/examples/l2ls-fabric/intended/structured_configs/LEAF4.yml
+++ b/ansible_collections/arista/avd/examples/l2ls-fabric/intended/structured_configs/LEAF4.yml
@@ -113,7 +113,7 @@ ethernet_interfaces:
 - name: Ethernet1
   peer: SPINE1
   peer_interface: Ethernet4
-  peer_type: spine
+  peer_type: l2spine
   description: SPINE1_Ethernet4
   shutdown: false
   type: port-channel-member
@@ -123,7 +123,7 @@ ethernet_interfaces:
 - name: Ethernet2
   peer: SPINE2
   peer_interface: Ethernet4
-  peer_type: spine
+  peer_type: l2spine
   description: SPINE2_Ethernet4
   shutdown: false
   type: port-channel-member
