--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/BGP-SPINE2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/BGP-SPINE2.yml
@@ -172,7 +172,7 @@ ethernet_interfaces:
 - name: Ethernet1
   peer: BGP-LEAF1
   peer_interface: Ethernet2
-  peer_type: leaf
+  peer_type: l2leaf
   description: BGP-LEAF1_Ethernet2
   shutdown: false
   type: port-channel-member
@@ -182,7 +182,7 @@ ethernet_interfaces:
 - name: Ethernet2
   peer: BGP-LEAF2
   peer_interface: Ethernet2
-  peer_type: leaf
+  peer_type: l2leaf
   description: BGP-LEAF2_Ethernet2
   shutdown: false
   type: port-channel-member
