--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/L2ONLY-SPINE2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/L2ONLY-SPINE2.yml
@@ -82,7 +82,7 @@ ethernet_interfaces:
 - name: Ethernet1
   peer: L2ONLY-LEAF1
   peer_interface: Ethernet2
-  peer_type: leaf
+  peer_type: l2leaf
   description: L2ONLY-LEAF1_Ethernet2
   shutdown: false
   type: port-channel-member
@@ -92,7 +92,7 @@ ethernet_interfaces:
 - name: Ethernet2
   peer: L2ONLY-LEAF2
   peer_interface: Ethernet2
-  peer_type: leaf
+  peer_type: l2leaf
   description: L2ONLY-LEAF2_Ethernet2
   shutdown: false
   type: port-channel-member
