--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/OSPF-SPINE1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/OSPF-SPINE1.yml
@@ -103,7 +103,7 @@ ethernet_interfaces:
 - name: Ethernet1
   peer: OSPF-LEAF1
   peer_interface: Ethernet1
-  peer_type: leaf
+  peer_type: l2leaf
   description: OSPF-LEAF1_Ethernet1
   shutdown: false
   type: port-channel-member
@@ -113,7 +113,7 @@ ethernet_interfaces:
 - name: Ethernet2
   peer: OSPF-LEAF2
   peer_interface: Ethernet1
-  peer_type: leaf
+  peer_type: l2leaf
   description: OSPF-LEAF2_Ethernet1
   shutdown: false
   type: port-channel-member
