--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/OSPF-SPINE2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/structured_configs/OSPF-SPINE2.yml
@@ -106,7 +106,7 @@ ethernet_interfaces:
 - name: Ethernet1
   peer: OSPF-LEAF1
   peer_interface: Ethernet2
-  peer_type: leaf
+  peer_type: l2leaf
   description: OSPF-LEAF1_Ethernet2
   shutdown: false
   type: port-channel-member
@@ -116,7 +116,7 @@ ethernet_interfaces:
 - name: Ethernet2
   peer: OSPF-LEAF2
   peer_interface: Ethernet2
-  peer_type: leaf
+  peer_type: l2leaf
   description: OSPF-LEAF2_Ethernet2
   shutdown: false
   type: port-channel-member
