--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/inventory/group_vars/BGP_LEAFS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/inventory/group_vars/BGP_LEAFS.yml
@@ -1,7 +1,7 @@
 ---
-type: leaf
+type: l2leaf
 
-leaf:
+l2leaf:
   defaults:
     uplink_switches: [ BGP-SPINE1, BGP-SPINE2 ]
     uplink_interfaces: [ Ethernet1, Ethernet2 ]
