--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/inventory/group_vars/ISIS_LEAFS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/inventory/group_vars/ISIS_LEAFS.yml
@@ -1,8 +1,8 @@
 ---
 
-type: leaf
+type: l2leaf
 
-leaf:
+l2leaf:
   defaults:
     uplink_interfaces: ['Ethernet1']
     uplink_switches: ['ISIS-SPINE1']
