--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/SL-LEAF0B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/SL-LEAF0B.yml
@@ -72,7 +72,7 @@ ethernet_interfaces:
 - name: Ethernet27
   peer: SL-LEAF1A
   peer_interface: Ethernet27
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-LEAF1A_Ethernet27
   shutdown: false
   type: port-channel-member
@@ -82,7 +82,7 @@ ethernet_interfaces:
 - name: Ethernet28
   peer: SL-LEAF1B
   peer_interface: Ethernet27
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-LEAF1B_Ethernet27
   shutdown: false
   type: port-channel-member
@@ -92,7 +92,7 @@ ethernet_interfaces:
 - name: Ethernet41
   peer: SL-LEAF2A
   peer_interface: Ethernet41
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-LEAF2A_Ethernet41
   shutdown: false
   type: port-channel-member
@@ -102,7 +102,7 @@ ethernet_interfaces:
 - name: Ethernet42
   peer: SL-LEAF2A
   peer_interface: Ethernet42
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-LEAF2A_Ethernet42
   shutdown: false
   type: port-channel-member
@@ -112,7 +112,7 @@ ethernet_interfaces:
 - name: Ethernet43
   peer: SL-LEAF2B
   peer_interface: Ethernet41
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-LEAF2B_Ethernet41
   shutdown: false
   type: port-channel-member
@@ -122,7 +122,7 @@ ethernet_interfaces:
 - name: Ethernet44
   peer: SL-LEAF2B
   peer_interface: Ethernet42
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-LEAF2B_Ethernet42
   shutdown: false
   type: port-channel-member
