--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/SL-LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/SL-LEAF1A.yml
@@ -73,7 +73,7 @@ ethernet_interfaces:
 - name: Ethernet27
   peer: SL-LEAF0B
   peer_interface: Ethernet27
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-LEAF0B_Ethernet27
   shutdown: false
   type: port-channel-member
@@ -83,7 +83,7 @@ ethernet_interfaces:
 - name: Ethernet28
   peer: SL-MLEAF1
   peer_interface: Ethernet16
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-MLEAF1_Ethernet16
   shutdown: false
   type: port-channel-member
