--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/SL-LEAF1B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/SL-LEAF1B.yml
@@ -67,7 +67,7 @@ ethernet_interfaces:
 - name: Ethernet27
   peer: SL-LEAF0B
   peer_interface: Ethernet28
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-LEAF0B_Ethernet28
   shutdown: false
   type: port-channel-member
