--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/SL-LEAF2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/SL-LEAF2B.yml
@@ -67,7 +67,7 @@ ethernet_interfaces:
 - name: Ethernet41
   peer: SL-LEAF0B
   peer_interface: Ethernet43
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-LEAF0B_Ethernet43
   shutdown: false
   type: port-channel-member
@@ -77,7 +77,7 @@ ethernet_interfaces:
 - name: Ethernet42
   peer: SL-LEAF0B
   peer_interface: Ethernet44
-  peer_type: leaf
+  peer_type: l2leaf
   description: SL-LEAF0B_Ethernet44
   shutdown: false
   type: port-channel-member
