Removing changes from past tests, added new tests and address comment for issue in code.

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF2A.yml
@@ -234,6 +234,7 @@ router_bgp:
         - '100000:40'
     router_id: 192.168.255.10
     redistribute_routes:
+    - source_protocol: connected
     - source_protocol: static
   vlan_aware_bundles:
   - name: Tenant_A_APP_Zone
