--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_services_l2_only_false.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_services_l2_only_false.cfg
@@ -24,6 +24,7 @@ daemon TerminAttr
 vlan internal order ascending range 1006 1199
 !
 no ip igmp snooping vlan 120
+no ip igmp snooping vlan 122
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -55,6 +56,9 @@ vlan 120
 !
 vlan 121
    name Tenant_A_WEBZone_2
+!
+vlan 122
+   name Tenant_A_ERP_Zone_1
 !
 vlan 130
    name Tenant_A_APP_Zone_1
@@ -134,6 +138,9 @@ vlan 451
 vlan 452
    name Tenant_D_v6_WAN_Zone_3
 !
+vlan 453
+   name Tenant_D_WAN_Zone_1
+!
 vlan 1234
    name VRF_DEFAULT_SVI_WITH_OSPF
 !
@@ -144,6 +151,8 @@ vrf instance MGMT
 vrf instance Tenant_A_APP_Zone
 !
 vrf instance Tenant_A_DB_Zone
+!
+vrf instance Tenant_A_ERP_Zone
 !
 vrf instance Tenant_A_OP_Zone
    description Tenant_A_OP_Zone
@@ -161,6 +170,8 @@ vrf instance Tenant_C_OP_Zone
 vrf instance Tenant_C_WAN_Zone
 !
 vrf instance Tenant_D_OP_Zone
+!
+vrf instance TENANT_D_WAN_ZONE
 !
 interface Loopback0
    description ROUTER_ID
@@ -231,6 +242,15 @@ interface Vlan121
    mtu 1560
    vrf Tenant_A_WEB_Zone
    ip address virtual 10.1.10.254/24
+!
+interface Vlan122
+   description Tenant_A_ERP_Zone_1
+   no shutdown
+   vrf Tenant_A_ERP_Zone
+   ip helper-address 1.1.1.1 vrf TEST source-interface lo100
+   ip address virtual 10.1.30.1/24
+   ip address virtual 10.2.30.1/24 secondary
+   ip address virtual 10.2.31.1/24 secondary
 !
 interface Vlan130
    description Tenant_A_APP_Zone_1
@@ -374,6 +394,13 @@ interface Vlan452
    ipv6 address virtual 2001:db8:412::1/64
    ip address virtual 10.4.12.254/24
 !
+interface Vlan453
+   description Tenant_D_WAN_Zone_1
+   no shutdown
+   vrf TENANT_D_WAN_ZONE
+   ipv6 enable
+   ipv6 address virtual 10.0.10.1/24
+!
 interface Vlan1234
    description VRF_DEFAULT_SVI_WITH_OSPF
    shutdown
@@ -389,6 +416,7 @@ interface Vxlan1
    vxlan vlan 113 vni 10113
    vxlan vlan 120 vni 10120
    vxlan vlan 121 vni 10121
+   vxlan vlan 122 vni 10122
    vxlan vlan 130 vni 10130
    vxlan vlan 131 vni 10131
    vxlan vlan 132 vni 10132
@@ -415,11 +443,13 @@ interface Vxlan1
    vxlan vlan 450 vni 40450
    vxlan vlan 451 vni 40451
    vxlan vlan 452 vni 40452
+   vxlan vlan 453 vni 40453
    vxlan vlan 1234 vni 41234
    vxlan vrf 12345678 vni 41
    vxlan vrf default vni 123
    vxlan vrf Tenant_A_APP_Zone vni 12
    vxlan vrf Tenant_A_DB_Zone vni 13
+   vxlan vrf Tenant_A_ERP_Zone vni 17
    vxlan vrf Tenant_A_OP_Zone vni 10
    vxlan vrf Tenant_A_WAN_Zone vni 14
    vxlan vrf Tenant_A_WEB_Zone vni 11
@@ -428,6 +458,7 @@ interface Vxlan1
    vxlan vrf Tenant_C_OP_Zone vni 30
    vxlan vrf Tenant_C_WAN_Zone vni 31
    vxlan vrf Tenant_D_OP_Zone vni 40
+   vxlan vrf TENANT_D_WAN_ZONE vni 42
 !
 ip virtual-router mac-address 00:dc:00:00:00:0a
 !
@@ -445,6 +476,7 @@ ip routing vrf 12345678
 no ip routing vrf MGMT
 ip routing vrf Tenant_A_APP_Zone
 ip routing vrf Tenant_A_DB_Zone
+ip routing vrf Tenant_A_ERP_Zone
 ip routing vrf Tenant_A_OP_Zone
 ip routing vrf Tenant_A_WAN_Zone
 ip routing vrf Tenant_A_WEB_Zone
@@ -453,6 +485,11 @@ ip routing vrf Tenant_B_WAN_Zone
 ip routing vrf Tenant_C_OP_Zone
 ip routing vrf Tenant_C_WAN_Zone
 ip routing vrf Tenant_D_OP_Zone
+ip routing vrf TENANT_D_WAN_ZONE
+!
+ipv6 unicast-routing vrf 12345678
+ipv6 unicast-routing vrf Tenant_D_OP_Zone
+ipv6 unicast-routing vrf TENANT_D_WAN_ZONE
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.255.0/24 eq 32
@@ -529,6 +566,12 @@ router bgp 101
       redistribute learned
       vlan 140-141
    !
+   vlan-aware-bundle Tenant_A_ERP_Zone
+      rd 192.168.255.109:17
+      route-target both 17:17
+      redistribute learned
+      vlan 122
+   !
    vlan-aware-bundle Tenant_A_NFS
       rd 192.168.255.109:20161
       route-target both 20161:20161
@@ -589,6 +632,12 @@ router bgp 101
       redistribute learned
       vlan 410-413
    !
+   vlan-aware-bundle TENANT_D_WAN_ZONE
+      rd 192.168.255.109:42
+      route-target both 42:42
+      redistribute learned
+      vlan 453
+   !
    address-family evpn
       host-flap detection window 180 threshold 5 expiry timeout 10 seconds
       neighbor EVPN-OVERLAY-PEERS activate
@@ -622,6 +671,12 @@ router bgp 101
       route-target export evpn 13:13
       router-id 192.168.255.109
       redistribute connected
+   !
+   vrf Tenant_A_ERP_Zone
+      rd 192.168.255.109:17
+      route-target import evpn 17:17
+      route-target export evpn 17:17
+      router-id 192.168.255.109
    !
    vrf Tenant_A_OP_Zone
       rd 192.168.255.109:9
@@ -678,6 +733,13 @@ router bgp 101
       rd 192.168.255.109:40
       route-target import evpn 40:40
       route-target export evpn 40:40
+      router-id 192.168.255.109
+      redistribute connected
+   !
+   vrf TENANT_D_WAN_ZONE
+      rd 192.168.255.109:42
+      route-target import evpn 42:42
+      route-target export evpn 42:42
       router-id 192.168.255.109
 !
 router ospf 123
