--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL1B.yml
@@ -254,6 +254,18 @@ router_bgp:
     router_id: 192.168.255.15
     redistribute_routes:
     - source_protocol: connected
+  - name: TENANT_D_WAN_ZONE
+    router_id: 192.168.255.15
+    rd: 192.168.254.15:42
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - '65105:42'
+      export:
+      - address_family: evpn
+        route_targets:
+        - '65105:42'
   vlan_aware_bundles:
   - name: Tenant_A_WAN_Zone
     rd: 192.168.254.15:14
@@ -285,6 +297,20 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: '350'
+  - name: TENANT_D_WAN_ZONE
+    rd: 192.168.254.15:42
+    route_targets:
+      both:
+      - '65105:42'
+      import_export_evpn_domains:
+      - domain: remote
+        route_target: '65105:42'
+    redistribute_routes:
+    - learned
+    vlan: '453'
+    rd_evpn_domain:
+      domain: remote
+      rd: 192.168.254.15:42
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
@@ -374,6 +400,10 @@ vrfs:
 - name: Tenant_C_WAN_Zone
   tenant: Tenant_C
   ip_routing: true
+- name: TENANT_D_WAN_ZONE
+  tenant: Tenant_D
+  ip_routing: true
+  ipv6_routing: true
 management_interfaces:
 - name: Management99
   description: OOB_MANAGEMENT
@@ -563,6 +593,9 @@ vlans:
 - id: 350
   name: Tenant_C_WAN_Zone_1
   tenant: Tenant_C
+- id: 453
+  name: Tenant_D_WAN_Zone_1
+  tenant: Tenant_D
 ip_access_lists:
 - name: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Ethernet12
   entries:
@@ -625,6 +658,16 @@ vlan_interfaces:
   shutdown: false
   ip_address_virtual: 10.3.50.1/24
   vrf: Tenant_C_WAN_Zone
+- name: Vlan453
+  tenant: Tenant_D
+  tags:
+  - wan
+  description: Tenant_D_WAN_Zone_1
+  shutdown: false
+  ipv6_enable: true
+  ipv6_address_virtuals:
+  - 10.0.10.1/24
+  vrf: TENANT_D_WAN_ZONE
 router_ospf:
   process_ids:
   - id: 14
@@ -653,6 +696,8 @@ vxlan_interface:
         vni: 20250
       - id: 350
         vni: 30350
+      - id: 453
+        vni: 40453
       vrfs:
       - name: Tenant_A_L3_VRF_Zone
         vni: 15
@@ -664,6 +709,8 @@ vxlan_interface:
         vni: 21
       - name: Tenant_C_WAN_Zone
         vni: 31
+      - name: TENANT_D_WAN_ZONE
+        vni: 42
 metadata:
   platform: 7280R
 sflow:
