--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL2A.yml
@@ -236,6 +236,18 @@ router_bgp:
       description: test_bgp_peer_group_without_nodes_2nd_time
     updates:
       wait_install: true
+  - name: TENANT_D_WAN_ZONE
+    router_id: 192.168.255.16
+    rd: 192.168.255.16:42
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - '42:42'
+      export:
+      - address_family: evpn
+        route_targets:
+        - '42:42'
   vlan_aware_bundles:
   - name: Tenant_A_WAN_Zone
     rd: 192.168.255.16:14
@@ -261,6 +273,14 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: '350'
+  - name: TENANT_D_WAN_ZONE
+    rd: 192.168.255.16:42
+    route_targets:
+      both:
+      - '42:42'
+    redistribute_routes:
+    - learned
+    vlan: '453'
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
@@ -332,6 +352,10 @@ vrfs:
 - name: Tenant_C_WAN_Zone
   tenant: Tenant_C
   ip_routing: true
+- name: TENANT_D_WAN_ZONE
+  tenant: Tenant_D
+  ip_routing: true
+  ipv6_routing: true
 management_interfaces:
 - name: Management1
   description: OOB_MANAGEMENT
@@ -443,6 +467,9 @@ vlans:
 - id: 350
   name: Tenant_C_WAN_Zone_1
   tenant: Tenant_C
+- id: 453
+  name: Tenant_D_WAN_Zone_1
+  tenant: Tenant_D
 ip_igmp_snooping:
   globally_enabled: true
 ip_virtual_router_mac_address: 00:dc:00:00:00:0a
@@ -476,6 +503,16 @@ vlan_interfaces:
   shutdown: false
   ip_address_virtual: 10.3.50.1/24
   vrf: Tenant_C_WAN_Zone
+- name: Vlan453
+  tenant: Tenant_D
+  tags:
+  - wan
+  description: Tenant_D_WAN_Zone_1
+  shutdown: false
+  ipv6_enable: true
+  ipv6_address_virtuals:
+  - 10.0.10.1/24
+  vrf: TENANT_D_WAN_ZONE
 vxlan_interface:
   vxlan1:
     description: DC1-BL2A_VTEP
@@ -489,6 +526,8 @@ vxlan_interface:
         vni: 20250
       - id: 350
         vni: 30350
+      - id: 453
+        vni: 40453
       vrfs:
       - name: Tenant_A_WAN_Zone
         vni: 14
@@ -498,5 +537,7 @@ vxlan_interface:
         vni: 21
       - name: Tenant_C_WAN_Zone
         vni: 31
+      - name: TENANT_D_WAN_ZONE
+        vni: 42
 metadata:
   platform: 7280R2
