--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/evpn_services_l2_only_false.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/evpn_services_l2_only_false.yml
@@ -74,6 +74,7 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
   - name: Tenant_A_OP_Zone
+    router_id: 192.168.255.109
     rd: 192.168.255.109:9
     route_targets:
       import:
@@ -229,6 +230,14 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: 140-141
+  - name: Tenant_A_ERP_Zone
+    rd: 192.168.255.109:17
+    route_targets:
+      both:
+      - '17:17'
+    redistribute_routes:
+    - learned
+    vlan: '122'
   - name: Tenant_A_OP_Zone
     rd: 192.168.255.109:9
     route_targets:
@@ -345,6 +354,14 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: 410-413
+  - name: TENANT_D_WAN_ZONE
+    rd: 192.168.255.109:42
+    route_targets:
+      both:
+      - '42:42'
+    redistribute_routes:
+    - learned
+    vlan: '453'
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
@@ -408,6 +425,9 @@ vrfs:
 - name: Tenant_A_DB_Zone
   tenant: Tenant_A
   ip_routing: true
+- name: Tenant_A_ERP_Zone
+  tenant: Tenant_A
+  ip_routing: true
 - name: Tenant_A_OP_Zone
   tenant: Tenant_A
   ip_routing: true
@@ -435,6 +455,10 @@ vrfs:
   ip_routing: true
   ipv6_routing: true
 - name: Tenant_D_OP_Zone
+  tenant: Tenant_D
+  ip_routing: true
+  ipv6_routing: true
+- name: TENANT_D_WAN_ZONE
   tenant: Tenant_D
   ip_routing: true
   ipv6_routing: true
@@ -512,6 +536,9 @@ vlans:
   tenant: Tenant_A
 - id: 141
   name: Tenant_A_DB_Zone_2
+  tenant: Tenant_A
+- id: 122
+  name: Tenant_A_ERP_Zone_1
   tenant: Tenant_A
 - id: 110
   name: Tenant_A_OP_Zone_1
@@ -597,6 +624,9 @@ vlans:
 - id: 413
   name: Tenant_D_v6_OP_Zone_3
   tenant: Tenant_D
+- id: 453
+  name: Tenant_D_WAN_Zone_1
+  tenant: Tenant_D
 ip_access_lists:
 - name: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Vlan110
   entries:
@@ -615,6 +645,8 @@ ip_access_lists:
 ip_igmp_snooping:
   globally_enabled: true
   vlans:
+  - id: 122
+    enabled: false
   - id: 120
     enabled: false
 ip_virtual_router_mac_address: 00:dc:00:00:00:0a
@@ -660,6 +692,21 @@ vlan_interfaces:
   shutdown: false
   ip_address_virtual: 10.1.41.1/24
   vrf: Tenant_A_DB_Zone
+- name: Vlan122
+  tenant: Tenant_A
+  tags:
+  - erp3
+  description: Tenant_A_ERP_Zone_1
+  shutdown: false
+  ip_address_virtual: 10.1.30.1/24
+  ip_address_virtual_secondaries:
+  - 10.2.30.1/24
+  - 10.2.31.1/24
+  vrf: Tenant_A_ERP_Zone
+  ip_helpers:
+  - ip_helper: 1.1.1.1
+    source_interface: lo100
+    vrf: TEST
 - name: Vlan110
   tenant: Tenant_A
   tags:
@@ -898,6 +945,16 @@ vlan_interfaces:
   - ip_helper: 1.1.1.2
     source_interface: lo102
     vrf: TEST
+- name: Vlan453
+  tenant: Tenant_D
+  tags:
+  - wan
+  description: Tenant_D_WAN_Zone_1
+  shutdown: false
+  ipv6_enable: true
+  ipv6_address_virtuals:
+  - 10.0.10.1/24
+  vrf: TENANT_D_WAN_ZONE
 router_ospf:
   process_ids:
   - id: 123
@@ -925,6 +982,8 @@ vxlan_interface:
         vni: 10140
       - id: 141
         vni: 10141
+      - id: 122
+        vni: 10122
       - id: 110
         vni: 10110
       - id: 111
@@ -981,11 +1040,15 @@ vxlan_interface:
         vni: 40412
       - id: 413
         vni: 40413
+      - id: 453
+        vni: 40453
       vrfs:
       - name: Tenant_A_APP_Zone
         vni: 12
       - name: Tenant_A_DB_Zone
         vni: 13
+      - name: Tenant_A_ERP_Zone
+        vni: 17
       - name: Tenant_A_OP_Zone
         vni: 10
       - name: Tenant_A_WAN_Zone
@@ -1006,6 +1069,8 @@ vxlan_interface:
         vni: 123
       - name: Tenant_D_OP_Zone
         vni: 40
+      - name: TENANT_D_WAN_ZONE
+        vni: 42
 virtual_source_nat_vrfs:
 - name: Tenant_A_OP_Zone
   ip_address: 10.255.1.109
