--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/evpn_services_l2_only_true.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/evpn_services_l2_only_true.yml
@@ -60,6 +60,14 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: 140-141
+  - name: Tenant_A_ERP_Zone
+    rd: 192.168.255.109:17
+    route_targets:
+      both:
+      - '17:17'
+    redistribute_routes:
+    - learned
+    vlan: '122'
   - name: Tenant_A_OP_Zone
     rd: 192.168.255.109:9
     route_targets:
@@ -176,6 +184,14 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: 410-413
+  - name: TENANT_D_WAN_ZONE
+    rd: 192.168.255.109:42
+    route_targets:
+      both:
+      - '42:42'
+    redistribute_routes:
+    - learned
+    vlan: '453'
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
@@ -299,6 +315,9 @@ vlans:
 - id: 141
   name: Tenant_A_DB_Zone_2
   tenant: Tenant_A
+- id: 122
+  name: Tenant_A_ERP_Zone_1
+  tenant: Tenant_A
 - id: 110
   name: Tenant_A_OP_Zone_1
   tenant: Tenant_A
@@ -383,9 +402,14 @@ vlans:
 - id: 413
   name: Tenant_D_v6_OP_Zone_3
   tenant: Tenant_D
+- id: 453
+  name: Tenant_D_WAN_Zone_1
+  tenant: Tenant_D
 ip_igmp_snooping:
   globally_enabled: true
   vlans:
+  - id: 122
+    enabled: false
   - id: 120
     enabled: false
 vxlan_interface:
@@ -405,6 +429,8 @@ vxlan_interface:
         vni: 10140
       - id: 141
         vni: 10141
+      - id: 122
+        vni: 10122
       - id: 110
         vni: 10110
       - id: 111
@@ -461,3 +487,5 @@ vxlan_interface:
         vni: 40412
       - id: 413
         vni: 40413
+      - id: 453
+        vni: 40453
