--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/DC1_TENANTS_NETWORKS/Tenant_D.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/DC1_TENANTS_NETWORKS/Tenant_D.yml
@@ -6,7 +6,6 @@ tenant_d:
         vrf_vni: 40
         enable_mlag_ibgp_peering_vrfs: true
         mlag_ibgp_peering_vlan: 2
-        redistribute_connected: false
         svis:
           - id: 410
             name: Tenant_D_v6_OP_Zone_1
@@ -122,3 +121,13 @@ tenant_d:
             ospf:
               area: 0.0.0.0
               enabled: true
+      - name: TENANT_D_WAN_ZONE
+        vrf_vni: 42
+        redistribute_connected: false
+        svis:
+          - id: 453
+            name: Tenant_D_WAN_Zone_1
+            tags: ['wan']
+            enabled: True
+            ipv6_address_virtuals:
+              - "10.0.10.1/24"
