--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -66,12 +66,36 @@ port_channel_interfaces:
         private_vlan_secondary: false
     mlag: 15
     spanning_tree_guard: loop
+    # Test isis authentication both md5 rx
+    isis_authentication:
+      both:
+        key_type: 0
+        key: password
+        mode: md5
+        rx_disabled: true
+      level_1:
+        key_type: 0
+        key: password
+        mode: md5
+        rx_disabled: true
+      level_2:
+        key_type: 0
+        key: password
+        mode: text
+        rx_disabled: true
 
   - name: Port-Channel16
     description: DC1_L2LEAF4_Po1
     snmp_trap_link_change: true
     mlag: 16
     spanning_tree_guard: disabled
+    # Test isis auth both md5
+    isis_enable: "EVPN_UNDERLAY"
+    isis_authentication:
+      both:
+        key_type: 0
+        key: password
+        mode: md5
     switchport:
       mode: trunk
       port_security:
@@ -107,6 +131,16 @@ port_channel_interfaces:
         groups:
           - LEAF_PEER_L3
           - MLAG
+    isis_enable: "EVPN_UNDERLAY"
+    # Test isis auth both sha rx
+    isis_authentication:
+      both:
+        key_type: 0
+        key: password
+        mode: sha
+        sha:
+          key_id: 2
+        rx_disabled: true
 
   - name: Port-Channel10
     description: SRV01_bond0
@@ -120,6 +154,15 @@ port_channel_interfaces:
       route_target: "04:04:03:03:02:02"
     shape:
       rate: 50 percent
+    # Test isis auth both sha
+    isis_enable: "EVPN_UNDERLAY"
+    isis_authentication:
+      both:
+        key_type: 0
+        key: password
+        mode: sha
+        sha:
+          key_id: 2
 
   - name: Port-Channel50
     description: SRV-POD03_PortChanne1
@@ -132,6 +175,15 @@ port_channel_interfaces:
       identifier: "0000:0000:0303:0202:0101"
       route_target: "03:03:02:02:01:01"
     lacp_id: 0303.0202.0101
+    # Test isis auth both shared secret rx
+    isis_enable: "EVPN_UNDERLAY"
+    isis_authentication:
+      both:
+        mode: shared-secret
+        shared_secret:
+          profile: profile1
+          algorithm: sha-1
+        rx_disabled: true
 
   - name: Port-Channel51
     description: ipv6_prefix
@@ -155,11 +207,33 @@ port_channel_interfaces:
         valid_lifetime: infinite
         preferred_lifetime: infinite
         no_autoconfig_flag: true
+    # Test isis auth both shared secret
+    isis_enable: "EVPN_UNDERLAY"
+    isis_authentication:
+      both:
+        mode: shared-secret
+        shared_secret:
+          profile: profile1
+          algorithm: sha-1
 
   - name: Port-Channel100
     logging:
       event:
         link_status: true
+    # Test isis auth both l1l2 md5 rx
+    isis_enable: "EVPN_UNDERLAY"
+    isis_authentication:
+      level_1:
+        key_type: 0
+        key: password
+        mode: md5
+        rx_disabled: true
+      level_2:
+        key_type: 0
+        key: password
+        mode: md5
+        rx_disabled: true
+
     switchport:
       enabled: false
       port_security:
@@ -260,6 +334,18 @@ port_channel_interfaces:
         violation:
           mode: protect
 
+    # Test isis auth l1l2 md5
+    isis_enable: "EVPN_UNDERLAY"
+    isis_authentication:
+      level_1:
+        key_type: 0
+        key: password
+        mode: md5
+      level_2:
+        key_type: 0
+        key: password
+        mode: md5
+
   - name: Port-Channel8.101
     description: to Dev02 Port-Channel8.101 - VRF-C1
     ip_address: 10.1.2.3/31
@@ -289,6 +375,21 @@ port_channel_interfaces:
       access_vlan: 200
     l2_protocol:
       encapsulation_dot1q_vlan: 200
+    # Test isis auth l1l2 shared secret rx
+    isis_enable: "EVPN_UNDERLAY"
+    isis_authentication:
+      level_1:
+        mode: shared-secret
+        shared_secret:
+          profile: profile1
+          algorithm: sha-256
+        rx_disabled: true
+      level_2:
+        mode: shared-secret
+        shared_secret:
+          profile: profile1
+          algorithm: sha-256
+        rx_disabled: true
 
   - name: Port-Channel12
     description: interface_in_mode_access_with_voice
@@ -300,6 +401,13 @@ port_channel_interfaces:
       phone:
         trunk: untagged
         vlan: 70
+    # Test isis auth l1l2 sha
+    isis_enable: "EVPN_UNDERLAY"
+    isis_authentication:
+      level_1:
+        mode: sha
+        sha:
+          key_id: 5
 
   - name: Port-Channel13
     description: EVPN-Vxlan single-active redundancy
@@ -315,6 +423,55 @@ port_channel_interfaces:
         hold_time: 10
         candidate_reachability_required: true
       route_target: "00:00:01:02:03:04"
+    isis_authentication:
+      both:
+        key_ids:
+          - id: 2
+            algorithm: sha-512
+            key_type: 0
+            key: password
+            rfc_5310: false
+          - id: 3
+            algorithm: sha-512
+            key_type: 0
+            key: password1
+            rfc_5310: true
+      level_1:
+        key_ids:
+          - id: 1
+            algorithm: sha-1
+            key_type: 0
+            key: password
+            rfc_5310: false
+          - id: 4
+            algorithm: sha-1
+            key_type: 0
+            key: password
+            rfc_5310: true
+          - id: 3
+            algorithm: sha-1
+            key_type: 0
+            key: password3
+          - id: 5
+            algorithm: sha-1
+            key_type: 0
+            key: password3
+      level_2:
+        key_ids:
+          - id: 1
+            algorithm: sha-1
+            key_type: 0
+            key: password
+            rfc_5310: false
+          - id: 5
+            algorithm: sha-1
+            key_type: 0
+            key: password
+            rfc_5310: true
+          - id: 3
+            algorithm: sha-1
+            key_type: 0
+            key: password2
 
   - name: Port-Channel14
     switchport:
