Updating molecule inputs

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/lldp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/lldp.cfg
@@ -25,6 +25,7 @@ interface Ethernet2
    description Switched port with no LLDP rx/tx
    switchport access vlan 110
    switchport mode access
+   switchport
    no lldp transmit
 !
 interface Ethernet3
