--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -64,6 +64,7 @@ ethernet_interfaces:
       version: 2
 
   - name: Ethernet2
+    type: switched
     peer: SRV-POD03
     peer_interface: Eth1
     peer_type: server
@@ -343,6 +344,7 @@ ethernet_interfaces:
       vlan: 70
 
   - name: Ethernet14
+    type: switched
     logging:
       event:
         link_status: true
@@ -354,12 +356,14 @@ ethernet_interfaces:
     vlans: 110-111,210-211
 
   - name: Ethernet15
+    type: switched
     description: PVLAN Promiscuous Access - only one secondary
     mode: access
     vlans: 110
     pvlan_mapping: 111
 
   - name: Ethernet16
+    type: switched
     description: PVLAN Promiscuous Trunk - vlan translation out
     mode: trunk
     vlans: 110-112
@@ -369,6 +373,7 @@ ethernet_interfaces:
         to: 110
 
   - name: Ethernet17
+    type: switched
     description: PVLAN Secondary Trunk
     mode: trunk
     vlans: 110-112
@@ -384,6 +389,7 @@ ethernet_interfaces:
         input: MyLANServicePolicy
 
   - name: Ethernet19
+    type: switched
     description: Switched port with no LLDP rx/tx
     mode: access
     vlans: 110
@@ -400,6 +406,7 @@ ethernet_interfaces:
       receive: false
 
   - name: Ethernet21
+    type: switched
     description: 200MBit/s shape
     qos:
       trust: disabled
@@ -407,22 +414,26 @@ ethernet_interfaces:
       rate: "200000 kbps"
 
   - name: Ethernet22
+    type: switched
     description: 10% shape
     shape:
       rate: "10 percent"
 
   - name: Ethernet23
+    type: switched
     description: Error-correction encoding
     error_correction_encoding:
       fire_code: true
       reed_solomon: true
 
   - name: Ethernet24
+    type: switched
     description: Disable error-correction encoding
     error_correction_encoding:
       enabled: false
 
   - name: Ethernet25
+    type: switched
     description: Molecule MAC
     mac_access_group_in: MAC_ACL_IN
     mac_access_group_out: MAC_ACL_OUT
@@ -485,6 +496,7 @@ ethernet_interfaces:
         client: true
 
   - name: Ethernet27
+    type: switched
     description: EVPN-Vxlan single-active redundancy
     evpn_ethernet_segment:
       identifier: "0000:0000:0000:0102:0304"
@@ -498,6 +510,7 @@ ethernet_interfaces:
         candidate_reachability_required: true
 
   - name: Ethernet28
+    type: switched
     description: EVPN-MPLS multihoming
     evpn_ethernet_segment:
       identifier: "0000:0000:0000:0102:0305"
@@ -507,35 +520,41 @@ ethernet_interfaces:
         tunnel_flood_filter_time: 100
 
   - name: Ethernet29
+    type: switched
     description: DOT1X Testing - auto phone true
     dot1x:
       port_control: auto
       port_control_force_authorized_phone: true
 
   - name: Ethernet30
+    type: switched
     description: DOT1X Testing - force-authorized phone false
     dot1x:
       port_control: force-authorized
       port_control_force_authorized_phone: false
 
   - name: Ethernet31
+    type: switched
     description: DOT1X Testing - force-unauthorized - no phone
     dot1x:
       port_control: force-unauthorized
 
   - name: Ethernet32
+    type: switched
     description: DOT1X Testing - auto reauthentication
     dot1x:
       port_control: auto
       reauthentication: true
 
   - name: Ethernet33
+    type: switched
     description: DOT1X Testing - pae mode authenticator
     dot1x:
       pae:
         mode: authenticator
 
   - name: Ethernet34
+    type: switched
     description: DOT1X Testing - authentication_failure allow
     dot1x:
       authentication_failure:
@@ -543,24 +562,28 @@ ethernet_interfaces:
         allow_vlan: 800
 
   - name: Ethernet35
+    type: switched
     description: DOT1X Testing - authentication_failure drop
     dot1x:
       authentication_failure:
         action: drop
 
   - name: Ethernet36
+    type: switched
     description: DOT1X Testing - host-mode single-host
     dot1x:
       host_mode:
         mode: single-host
 
   - name: Ethernet37
+    type: switched
     description: DOT1X Testing - host-mode multi-host
     dot1x:
       host_mode:
         mode: multi-host
 
   - name: Ethernet38
+    type: switched
     description: DOT1X Testing - host-mode multi-host authenticated
     dot1x:
       host_mode:
@@ -568,6 +591,7 @@ ethernet_interfaces:
         multi_host_authenticated: true
 
   - name: Ethernet39
+    type: switched
     description: DOT1X Testing - mac_based_authentication host-mode common true
     dot1x:
       mac_based_authentication:
@@ -575,6 +599,7 @@ ethernet_interfaces:
         host_mode_common: true
 
   - name: Ethernet40
+    type: switched
     description: DOT1X Testing - mac_based_authentication always
     dot1x:
       mac_based_authentication:
@@ -582,6 +607,7 @@ ethernet_interfaces:
         always: true
 
   - name: Ethernet41
+    type: switched
     description: DOT1X Testing - mac_based_authentication always and host-mode common
     dot1x:
       mac_based_authentication:
@@ -590,12 +616,14 @@ ethernet_interfaces:
         host_mode_common: true
 
   - name: Ethernet42
+    type: switched
     description: DOT1X Testing - mac_based_authentication
     dot1x:
       mac_based_authentication:
         enabled: true
 
   - name: Ethernet43
+    type: switched
     description: DOT1X Testing - timeout values
     dot1x:
       timeout:
@@ -606,6 +634,7 @@ ethernet_interfaces:
         tx_period: 6
 
   - name: Ethernet44
+    type: switched
     description: DOT1X Testing - reauthorization_request_limit
     dot1x:
       reauthorization_request_limit: 3
@@ -613,6 +642,7 @@ ethernet_interfaces:
         disabled: true
 
   - name: Ethernet45
+    type: switched
     description: DOT1X Testing - all features
     dot1x:
       port_control: auto
@@ -644,6 +674,7 @@ ethernet_interfaces:
         native_vlan_membership_egress: true
 
   - name: Ethernet46
+    type: switched
     description: native-vlan-tag-precedence
     native_vlan_tag: true
     native_vlan: 100
@@ -669,17 +700,20 @@ ethernet_interfaces:
     load_interval: 5
 
   - name: Ethernet50
+    type: switched
     description: SFlow Interface Testing - SFlow ingress enabled
     sflow:
       enable: true
 
   - name: Ethernet51
+    type: switched
     description: SFlow Interface Testing - SFlow egress enabled
     sflow:
       egress:
         enable: true
 
   - name: Ethernet52
+    type: switched
     description: SFlow Interface Testing - SFlow ingress and egress unmodified enabled
     sflow:
       enable: true
@@ -687,6 +721,7 @@ ethernet_interfaces:
         unmodified_enable: true
 
   - name: Ethernet53
+    type: switched
     description: SFlow Interface Testing - SFlow ingress and egress disabled
     sflow:
       enable: false
@@ -694,6 +729,7 @@ ethernet_interfaces:
         enable: false
 
   - name: Ethernet54
+    type: switched
     description: SFlow Interface Testing - SFlow ingress and egress unmodified disabled
     sflow:
       enable: false
@@ -714,6 +750,7 @@ ethernet_interfaces:
         local_interface: Loopback55
 
   - name: Ethernet56
+    type: switched
     description: Interface with poe commands and limit in class
     poe:
       priority: low
@@ -730,6 +767,7 @@ ethernet_interfaces:
       negotiation_lldp: false
 
   - name: Ethernet57
+    type: switched
     description: Interface with poe commands and limit in watts
     poe:
       disabled: false
@@ -747,11 +785,13 @@ ethernet_interfaces:
       negotiation_lldp: true
 
   - name: Ethernet58
+    type: switched
     description: Interface with poe disabled and no other poe keys
     poe:
       disabled: true
 
   - name: Ethernet60
+    type: switched
     description: IP NAT Testing
     ip_nat:
       destination:
@@ -933,6 +973,7 @@ ethernet_interfaces:
     dhcp_server_ipv6: true
 
   - name: Ethernet69
+    type: switched
     description: IP NAT service-profile
     ip_nat:
       service_profile: TEST-NAT-PROFILE
@@ -1011,11 +1052,14 @@ ethernet_interfaces:
           version: 3
 # Transceiver Frequency
   - name: Ethernet67
+    type: switched
     description: Custom_Transceiver_Frequency
     shutdown: false
     transceiver:
       frequency: 190050
+
   - name: Ethernet68
+    type: switched
     description: Custom_Transceiver_Frequency
     shutdown: false
     transceiver:
