--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/l2-protocol-forwarding.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/l2-protocol-forwarding.cfg
@@ -47,10 +47,12 @@ no aaa root
 !
 interface Port-Channel1
    description L2PF test
+   switchport
    l2-protocol forwarding profile TEST2
 !
 interface Ethernet1
    description L2PF test
+   switchport
    l2-protocol forwarding profile TEST1
 !
 interface Management1
