--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -9,6 +9,7 @@ no aaa root
 !
 interface Port-Channel3
    description MLAG_PEER_DC1-LEAF1B_Po3
+   switchport
    switchport trunk allowed vlan 2-4094
    switchport mode trunk
    switchport trunk group LEAF_PEER_L3
@@ -19,6 +20,7 @@ interface Port-Channel3
 interface Port-Channel5
    description DC1_L2LEAF1_Po1
    bgp session tracker ST2
+   switchport
    switchport trunk allowed vlan 110,201
    switchport mode trunk
    ip igmp host-proxy
@@ -66,6 +68,7 @@ interface Port-Channel9
 !
 interface Port-Channel10
    description SRV01_bond0
+   switchport
    switchport trunk allowed vlan 2-3000
    switchport mode trunk
    evpn ethernet-segment
@@ -83,6 +86,7 @@ interface Port-Channel12
 !
 interface Port-Channel13
    description EVPN-Vxlan single-active redundancy
+   switchport
    evpn ethernet-segment
       identifier 0000:0000:0000:0102:0304
       redundancy single-active
@@ -93,6 +97,7 @@ interface Port-Channel13
 !
 interface Port-Channel14
    description EVPN-MPLS multihoming
+   switchport
    evpn ethernet-segment
       identifier 0000:0000:0000:0102:0305
       mpls tunnel flood filter time 100
@@ -101,6 +106,7 @@ interface Port-Channel14
 !
 interface Port-Channel15
    description DC1_L2LEAF3_Po1
+   switchport
    switchport trunk allowed vlan 110,201
    switchport mode trunk
    mlag 15
@@ -109,6 +115,7 @@ interface Port-Channel15
 !
 interface Port-Channel16
    description DC1_L2LEAF4_Po1
+   switchport
    switchport trunk allowed vlan 110,201
    switchport mode trunk
    snmp trap link-change
@@ -129,6 +136,7 @@ interface Port-Channel20
 !
 interface Port-Channel50
    description SRV-POD03_PortChanne1
+   switchport
    switchport trunk allowed vlan 1-4000
    switchport mode trunk
    evpn ethernet-segment
@@ -138,6 +146,7 @@ interface Port-Channel50
 !
 interface Port-Channel51
    description ipv6_prefix
+   switchport
    switchport trunk allowed vlan 1-500
    switchport mode trunk
    ipv6 nd prefix a1::/64 infinite infinite no-autoconfig
@@ -175,24 +184,28 @@ interface Port-Channel100.102
 !
 interface Port-Channel101
    description PVLAN Promiscuous Access - only one secondary
+   switchport
    switchport access vlan 110
    switchport pvlan mapping 111
    no qos trust
 !
 interface Port-Channel102
    description PVLAN Promiscuous Trunk - vlan translation out
+   switchport
    switchport trunk allowed vlan 110-112
    switchport mode trunk
    switchport vlan translation out 111-112 110
 !
 interface Port-Channel103
    description PVLAN Secondary Trunk
+   switchport
    switchport trunk allowed vlan 110-112
    switchport mode trunk
    switchport trunk private-vlan secondary
 !
 interface Port-Channel104
    description LACP fallback individual
+   switchport
    switchport trunk allowed vlan 112
    switchport mode trunk
    port-channel lacp fallback timeout 300
@@ -200,24 +213,29 @@ interface Port-Channel104
 !
 interface Port-Channel105
    description bpdu disabled
+   switchport
    spanning-tree bpduguard disable
    spanning-tree bpdufilter disable
 !
 interface Port-Channel106
    description bpdu enabled
+   switchport
    spanning-tree bpduguard enable
    spanning-tree bpdufilter enable
 !
 interface Port-Channel107
    description bpdu true
+   switchport
    spanning-tree bpduguard enable
    spanning-tree bpdufilter enable
 !
 interface Port-Channel108
    description bpdu false
+   switchport
 !
 interface Port-Channel109
    description Molecule ACLs
+   switchport
    switchport access vlan 110
    ip access-group IPV4_ACL_IN in
    ip access-group IPV4_ACL_OUT out
@@ -279,6 +297,7 @@ interface Port-Channel111.1000
 !
 interface Port-Channel112
    description LACP fallback individual
+   switchport
    switchport trunk allowed vlan 112
    switchport mode trunk
    port-channel lacp fallback timeout 5
@@ -301,6 +320,7 @@ interface Port-Channel114
 !
 interface Port-Channel115
    description native-vlan-tag-precedence
+   switchport
    switchport trunk native vlan tag
    switchport mode trunk
 !
@@ -339,6 +359,7 @@ interface Port-Channel122
 !
 interface Port-Channel130
    description IP NAT Testing
+   switchport
    ip nat source static 3.0.0.1 4.0.0.1
    ip nat source dynamic access-list ACL2 pool POOL2
    ip nat destination static 1.0.0.1 2.0.0.1
@@ -401,6 +422,7 @@ interface Ethernet11/2
    description LAG Member LACP fallback LLDP ZTP VLAN
    switchport trunk allowed vlan 112
    switchport mode trunk
+   switchport
    channel-group 112 mode active
    lldp tlv transmit ztp vlan 112
    spanning-tree portfast
