--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/lldp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/lldp.yml
@@ -20,6 +20,7 @@ ethernet_interfaces:
       receive: false
 
   - name: Ethernet2
+    type: switched
     description: Switched port with no LLDP rx/tx
     mode: access
     vlans: 110
