Updating eos-designs tests

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/platform_settings.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/platform_settings.cfg
@@ -15,6 +15,7 @@ vrf instance MGMT
 !
 interface Ethernet12
    description Interface Created from platform_settings.structured_config
+   switchport
 no ip routing vrf MGMT
 !
 management api http-commands
