--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/platform_settings.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/platform_settings.yml
@@ -23,4 +23,5 @@ ip_igmp_snooping:
   globally_enabled: true
 ethernet_interfaces:
 - name: Ethernet12
+  type: switched
   description: Interface Created from platform_settings.structured_config
