--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/platform_settings.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/platform_settings.yml
@@ -15,4 +15,5 @@ platform_settings:
     structured_config:
       ethernet_interfaces:
         - name: Ethernet12
+          type: switched
           description: Interface Created from platform_settings.structured_config
