Feat(eos_designs)!: Improve logic for BGP configuration of network services VRFs

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -478,6 +478,9 @@ tenants:
       - name: NOT-WAN-VRF
         vrf_id: 13
         address_families: []
+        bgp:
+          # Test that we can forcefully configure BGP for this VRF even if not needed by anything.
+          enabled: true
   - name: TenantC
     mac_vrf_vni_base: 1000
     vrfs:
